--- a/templates/webcam.html
+++ b/templates/webcam.html
@@ -1,13 +1,31 @@
 <style>
     #webcam-container{
+        position: relative;
         height: 340px;
         width: 340px;
         background: black;
     }
 
+    #loader {
+    position: absolute;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid rgba(96,18,17, 0.8); /* Blue */
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    animation: spin 4s linear infinite;
+    top: 60px;
+    left: 60px;
+    }
+
+    @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(36000deg); }
+}
+
 </style>
 <div></div>
-<div id="webcam-container"></div>
+<div id="webcam-container"><div id="loader" ></div></div>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
@@ -57,6 +75,8 @@
     async function predict() {
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
+        let loader = document.getElementById('loader');
+        loader.style.display='none';
         for (let i = 0; i < maxPredictions; i++) {
             const classPrediction =
                 prediction[i].className + ": " + prediction[i].probability.toFixed(2);
