--- a/templates/webcam.html
+++ b/templates/webcam.html
@@ -146,13 +146,12 @@
     var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
-            response = JSON.parse(this.responseText)
+            response = JSON.parse(this.responseText) 
+            return response.ingredients
         }
     };
     xhttp.open("GET", url , true);
     xhttp.send();
-    console.log(response)
-    return response
 }
 
 function getProductCO2(product){
@@ -165,9 +164,9 @@ function getProductCO2(product){
             response = JSON.parse(this.responseText)
         }
     };
-    xhttp.open("GET", url , true);
+    xhttp.open("GET", url , false);
     xhttp.send();
-    console.log(response)
+    
     return response.recipe.rating
 }
 
@@ -181,9 +180,11 @@ function getProductCO2(product){
             index= indexOfMax(capture_list)
             pizza_name= capture_prediction[index].className
     
-
+            if(pizza_name=='margherita'){pizza_name='Margarita'}
+            
             /* var rating = getProductInfo(pizza_name, 'co2') */
             var ingredients = getProductIngredients(pizza_name)
+        
             /* webcam.stop(); */
             //video.src = "";
             //window.stream.getTracks()[0].stop();
