--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,10 @@
 	<section class="home_banner relative">
         <div class="text_class">
             <div>
-                <h1>Pizza</h1>
-                <p>Some Text</p>
-                <a class="main_btn" href="webcam">Analysis of your Pizza</a>
-                <a class="main_btn" href="make_your_own">Make Your Own Pizza</a>
+                <h1>Di Pizza</h1>
+                <p>Find the most suistainable ingredients for your pizza</p>
+                <a class="main_btn" href="webcam">Ingredient Detector</a>
+                <a class="main_btn" href="make_your_own">Discover Recipes</a>
             </div>
             <div class = "img_clss">
                 <img class="face-img img-fluid" src="/static/images/bg_1.png" alt="">
