--- a/static/css/style_try.css
+++ b/static/css/style_try.css
@@ -12,7 +12,7 @@ h1{
   font-family: "Oswald", serif;
   font-weight: 300;
   color: #222222;
-  font-size: 70px; 
+  font-size: 70px;
 }
 
 /* CSS Definations for p tag*/
@@ -21,13 +21,13 @@ h1{
 /* CSS Definations for a tag*/
 a {
     text-decoration: none;
-    transition: all 0.3s ease-in-out; 
+    transition: all 0.3s ease-in-out;
 }
 
 /* CSS Definations for hover on a*/
 a:hover, a:focus {
     text-decoration: none;
-    outline: none; 
+    outline: none;
 }
 
 
@@ -43,8 +43,8 @@ a:hover, a:focus {
 }
 
 img{
-    padding-left: 40%; 
-    width: 600px; 
+    padding-left: 40%;
+    width: 600px;
     height: 600px;
 }
 
@@ -66,14 +66,45 @@ img{
     border-radius: 5px;
     transition: all 300ms linear 0s;
     text-transform: capitalize;
-    box-shadow: -10px 10px 40px rgba(244, 47, 44, 0.32); 
+    box-shadow: -10px 10px 40px rgba(244, 47, 44, 0.32);
 }
 
 /* CSS Definations for hover on buttuons*/
 .main_btn:hover {
     background: transparent;
     color: #f42f2c;
-    box-shadow: none; 
+    box-shadow: none;
 }
-  
-      
+
+/* For Mobile Phones */
+@media screen and (max-width: 600px){
+
+    body{
+        background: linear-gradient(90deg, #f9f9f9 50%, #ffffff 50%);
+    }
+
+    .text_class{
+        flex-direction: column-reverse;
+        flex: 50%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .img_clss{
+        margin: 0%;
+        justify-content: center;
+    }
+
+    img{
+        width: 60vw;
+        height: 30vh;
+        padding: 10%;
+    }
+
+    h1{
+        margin-top: 0%;
+    }
+
+    div{
+        text-align: center;
+    }
