bon appetit hyperlink

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    
+
     <!--================ Start banner section =================-->
 	<section class="home_banner relative">
         <div class="text_class">
@@ -21,7 +21,7 @@
                 <h1>Di Pizza</h1>
                 <p>Find the most suistainable ingredients for your pizza</p>
                 <a class="main_btn" href="webcam">Ingredient Detector</a>
-                <a class="main_btn" href="make_your_own">Discover Recipes</a>
+                <a class="main_btn" href="https://www.bonappetit.com/recipes/family-meals/slideshow/pizza-recipes">Discover Recipes</a>
             </div>
             <div class = "img_clss">
                 <img class="face-img img-fluid" src="/static/images/bg_1.png" alt="">
@@ -29,7 +29,7 @@
         </div>
 	</section>
 	<!--================ End banner section =================-->
-    
+
 </body>
 
 </html>
